# PVR-GD-RUST

./: Character.xcf  InventoryBackground.xcf  InventoryLeftSide.xcf  README.md  Road.xcf  TilesetBasic.xcf
godot/: HelloWorld.gdextension  HelloWorld.gdextension.uid  icon.svg.import  one.gd  project.godot  test2.gd  test3.gd  two.gd  world.tscn
godot/Scenes/Interactables/: BaseContainer.tscn
godot/Scenes/UI/: inventory.tscn  inventory_slot.gd  inventory_slot.gd.uid
godot/addons/godot-git-plugin/: git_plugin.gdextension.uid
godot/assets/Characters/: Character.png.import
godot/assets/tilesets/: Civilized.png.import  Full.png.import  Natural.png.import
rust/: Cargo.toml
rust/my_macros/: Cargo.toml
rust/my_macros/src/: lib.rs
rust/my_macros_decl/: Cargo.toml
rust/my_macros_decl/src/: lib.rs
rust/src/: ContextOption.rs  base_container.rs  context_options.rs  entity.rs  inventory_slot.rs  lib.rs  mob.rs  player.rs  stats.rs  world.rs
